--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/pwa": "^3.3.2",
     "core-js": "^3.6.5",
     "gsap": "^3.5.1",
     "nuxt": "^2.14.6",
